tdf#138425 vcl/gtk activate main menu in UpdateFull

VCL GTK (in contrast to X11 and apparently Windows) pre-activates popup
menus in GtkSalMenu::UpdateFull by calling GtkSalMenu::ActivateAllSubmenus.
Before this patch, this, called on the main menu, would not activate
the main menu itself (which does get activated in X11 eventually).
This patch changes the logic to also activate the main menu.

This patch deals only with gtk3. A followup patch would do the analogous
change in the VCL Qt5 plugin in Qt5Menu::DoFullMenuUpdate.

I haven't discovered yet where this type of functionality is currently
tested, so sadly I don't have an idea how to test this and so didn't include
a test case.

Change-Id: I6cd9929acfd3b3af731bbc62d649d643044ca692
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106454
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit cbc18cc904c652a936c4b68fba4d975bd89b5abd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106583