vcl/inc/unx/gtk/gtksalmenu.hxx
@@ -112,7 +112,7 @@ public:
     bool                        PrepUpdate();
     virtual void                Update() override;  // Update this menu only.
     // Update full menu hierarchy from this menu.
-    void                        UpdateFull () { ActivateAllSubmenus(mpVCLMenu); Update(); }
+    void                        UpdateFull () { ActivateAllSubmenus(mpVCLMenu); }
     // Clear ActionGroup and MenuModel from full menu hierarchy
     void                        ClearActionGroupAndMenuModel();
     GtkSalMenu*                 GetTopLevel();
